--- a/index.html
+++ b/index.html
@@ -3,32 +3,61 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <style>
+      a {
+        color: red;
+      }
+      li {
+        border: 1px solid black;
+      }
+      li a {
+        color: blue;
+      }
+      .bio-box {
+        border: 1px solid black;
+      }
+      .bio-box a {
+        color: green;
+      }
+      .bio-box-exec {
+        background-color: azure;
+      }
+      #exec-azure {
+        background-color: azure;
+      }
+      #exec-bio {
+        background-color: lightgray;
+      }
+      #exec-orange {
+        background-color: orange;
+      }
+    </style>
   </head>
   <body>
     <h1>I'm an h1</h1>
     <ul>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-bio" class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-azure" class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-orange" class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box bio-box-exec">
+      <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
 </html>
