--- a/index.html
+++ b/index.html
@@ -10,40 +10,41 @@
         padding: 0;
       }
       h1 {
+        font-size: 7vw;
         margin-top: 0;
-        font-size: 2em;
-      }
-
-      body {
-        font-size: 62.5%;
       }
       a {
         color: #f00;
-      }
-      h2 {
-        font-size: 30px;
-      }
-
-      /* SNSスタイル */
-      .social-link {
-        background: rgba(150, 150, 150, 1);
-        color: rgba(0, 0, 255, 1);
       }
 
       /* ヒーロースタイル */
       .full-hero {
         background-color: #c7dbfc;
         height: 50vh;
-        width: 75vw;
+      }
+
+      /* SNSスタイル */
+      .social-link {
+        background: rgba(150, 150, 150, 0.5);
+        color: blue;
+        display: inline-block;
+        height: 36px;
+        width: 36px;
       }
 
       /* バイオグラフィースタイル */
       .bio-wrapper {
+        background-color: #c0e0c3;
+        overflow: hidden;
       }
+      
       .bio-box {
         border: 1px solid black;
-        font-size: 1em;
-        width: 50%;
+        box-sizing: border-box;
+        float: left;
+        font-size: 1rem;
+        padding: 2%;
+        width: 25%;
       }
       .bio-box h3 {
         font-size: 1.5em;
@@ -54,7 +55,6 @@
       .bio-copy a {
         color: green;
       }
-      
     </style>
   </head>
   <body>
@@ -72,9 +72,7 @@
         </li>
       </ul>
     </div>
-
     <h2>I'm an h2</h2>
-
     <div class="bio-wrapper">
       <div class="bio-box">
         <h3>Michael Hartl</h3>
@@ -100,10 +98,10 @@
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
           <p>
-            When he's not literally swimming with sharks or hunting powder stashes on
-            his snowboard, you can find Lee in front of his computer designing
-            interfaces, doing front-end development, or writing some of the
-            interface-related Learn Enough tutorials.
+            When he's not literally swimming with sharks or hunting powder
+            stashes on his snowboard, you can find Lee in front of his computer
+            designing interfaces, doing front-end development, or writing some of
+            the interface-related Learn Enough tutorials.
           </p>
         </div>
       </div>
@@ -112,21 +110,46 @@
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
           <p>
-            You may have seen him shredding guitar live with Capital Cities on Jimmy
-            Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
-            heart. He's just as happy shredding well-spec'd lines of code from a tour
-            bus as he is from his kitchen table.
-          </p>
-      </div>
-      </div>
-      <div class="bio-box">
-        <h3>??</h3>
-        <div class="bio-copy">
-          <p>
-            The Future
+            You may have seen him shredding guitar live with Capital Cities on
+            Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a
+            true nerd at heart. He's just as happy shredding well-spec'd lines
+            of code from a tour bus as he is from his kitchen table.
           </p>
         </div>
       </div>
+      <div class="bio-box">
+        <h3>??</h3>
+        <p>
+          The Future
+        </p>
+      </div>
     </div>
+    <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach the
+      world <em>technical sophistication</em>, which includes both "hard
+      skills" like coding, command lines, and version control, and "soft
+       skills" like guessing keyboard shortcuts, Googling error messages, and
+      knowing when to just reboot the darn thing.
+    </p>
+    <p>
+      We believe there are <strong>at least a billion people</strong> who can
+      benefit from learning technical sophistication, probably more. To join
+      our movement,
+      <a href="https://learnenough.com/#email_list">sign up for our official
+      email list</a> now.
+    </p>
+    <h3>Background</h3>
+    <p>
+      Learn Enough to Be Dangerous is an outgrowth of the
+      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
+      <a href="https://www.softcover.io/">Softcover publishing platform</a>.
+      This page is part of the sample site for
+      <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
+      Layout to Be Dangerous</em></a>, which teaches the basics of
+      <strong>C</strong>ascading <strong>S</strong>tyle
+      <strong>S</strong>heets, the language that allows web pages to be styled.
+      Other related tutorials can be found at
+      <a href="https://learnenough.com/">learnenough.com</a>.
+    </p>
   </body>
 </html>
