--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         float: left;
         font-size: 1rem;
         margin: 40px 1% 0;
-        padding: 2%;
+        padding: 0 2% 2%;
         width: 23%;
       }
       .bio-box > a {
@@ -74,6 +74,7 @@
       }
       .bio-copy a {
         color: green;
+        padding: 20px;
       }
     </style>
   </head>
