--- a/index.html
+++ b/index.html
@@ -26,40 +26,47 @@
       /* SNSスタイル */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
-        color: blue;
+        border-radius: 99px;
+        box-sizing: border-box;
+        color: #fff;
         display: inline-block;
-        height: 36px;
-        width: 36px;
+        font-family: helvetica, arial, sans;
+        font-size: 1rem;
+        font-weight: bold;
+        height: 2.5em;
+        line-height: 1;
+        padding-top: 0.85em;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        width: 2.5em;
       }
       .social-list {
         list-style: none;
         padding: 0;
-        text-align: right;
+        text-align: center;
       }
       .social-list > li {
         display: inline-block;
+        margin: 0 0.5em;
       }
 
       /* バイオグラフィースタイル */
       .bio-wrapper {
         font-size: 24px;
-        margin: 0 auto 50px;
+        margin: auto;
         max-width: 960px;
         overflow: hidden;
       }
-      
       .bio-box {
         border: 1px solid black;
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
         margin: 40px 1% 0;
-        padding: 0 2% 2%;
+        padding: 2%;
         width: 23%;
-      }
-      .bio-box > a {
-        color: #c68bf9;
-      }
+    }
       .bio-box h3 {
         color: #fff;
         font-size: 1.5em;
@@ -71,10 +78,10 @@
       }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
         color: green;
-        padding: 20px;
       }
     </style>
   </head>
@@ -83,13 +90,13 @@
       <h1>I'm an h1</h1>
       <ul class="social-list">
         <li>
-          <a href="https://example.com/" class="social-link">Link1</a>
+          <a href="https://example.com/" class="social-link">Fb</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link2</a>
+          <a href="https://example.com/" class="social-link">Tw</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link3</a>
+          <a href="https://example.com/" class="social-link">Gh</a>
         </li>
       </ul>
     </div>
@@ -98,7 +105,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
-        <a href="https://twitter.com/mhartl" class="social-link">here</a>
+        <a href="https://twitter.com/mhartl" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -106,8 +113,11 @@
             <a href="https://www.railstutorial.org/">Ruby on Rails
             Tutorial</a> and principal author of the
             <a href="https://learnenough.com/">
-            Learn Enough to Be Dangerous</a> introductory sequence. Michael
-            is also notorious as the founder of
+            Learn Enough to Be Dangerous</a> introductory sequence.
+          </p>
+
+          <p>
+            Michael is also notorious as the founder of
             <a href="http://tauday.com/">Tau Day</a> and author of
             <a href="http://tauday.com/tau-manifesto"><em>The Tau
             Manifesto</em></a>, but rumors that he's secretly a supervillain
@@ -118,7 +128,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder
@@ -131,7 +141,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
-        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on
